# ChangeLog for net-analyzer/tcptraceroute
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/tcptraceroute/ChangeLog,v 1.47 2008/07/01 02:07:42 jer Exp $

  01 Jul 2008; Jeroen Roovers <jer@gentoo.org>
  tcptraceroute-1.5_beta7-r1.ebuild:
  Stable for HPPA (bug #226991).

  26 Jun 2008; nixnut <nixnut@gentoo.org> tcptraceroute-1.5_beta7-r1.ebuild:
  Stable on ppc wrt bug 226991

  25 Jun 2008; Markus Rothe <corsair@gentoo.org>
  tcptraceroute-1.5_beta7-r1.ebuild:
  Stable on ppc64; bug #226991

  24 Jun 2008; Santiago M. Mola <coldwind@gentoo.org>
  tcptraceroute-1.5_beta7-r1.ebuild:
  amd64 stable wrt bug #226991.

  24 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  tcptraceroute-1.5_beta7-r1.ebuild:
  sparc/x86 stable

*tcptraceroute-1.5_beta7-r1 (30 Mar 2008)

  30 Mar 2008; Cédric Krier <cedk@gentoo.org>
  +tcptraceroute-1.5_beta7-r1.ebuild:
  Remove bindnow for bug #214087 and fix fperms that must be run after fowners

  06 Sep 2007; Markus Ullmann <jokey@gentoo.org>
  -tcptraceroute-1.5_beta5.ebuild, -tcptraceroute-1.5_beta6.ebuild:
  Cleanup

  13 May 2007; Steve Dibb <beandog@gentoo.org>
  tcptraceroute-1.5_beta7.ebuild:
  amd64 stable

  16 Apr 2007; Markus Rothe <corsair@gentoo.org>
  tcptraceroute-1.5_beta7.ebuild:
  Stable on ppc64

  01 Apr 2007; Michael Hanselmann <hansmi@gentoo.org>
  tcptraceroute-1.5_beta7.ebuild:
  Stable on ppc.

  09 Mar 2007; Raúl Porcel <armin76@gentoo.org>
  tcptraceroute-1.5_beta7.ebuild:
  x86 stable

  09 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  tcptraceroute-1.5_beta7.ebuild:
  Stable on sparc

  03 Mar 2007; Guy Martin <gmsoft@gentoo.org>
  tcptraceroute-1.5_beta7.ebuild:
  Stable on hppa

  20 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  20 Oct 2006; Stefaan De Roeck <stefaan@gentoo.org>
  tcptraceroute-1.5_beta7.ebuild:
  Keyword ~alpha

  10 Sep 2006; Javier Villavicencio <the_paya@gentoo.org>